앵커 기능 추가