@@ -115,6 +115,6 @@ public class QuestionController {
         Question question = this.questionService.getQuestion(id);
         SiteUser siteUser = this.userService.getUser(principal.getName());
         this.questionService.vote(question, siteUser);
-        return String.format("redirect:/question/detail/%s", id);
+        return "redirect:/question/detail/%d".formatted(id);
     }
 }
